--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
             <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
         </div>
     </section>
-    <footer>© Moshfiq Elahi 2020, all rights reserved</footer>
+    <footer>
+    <p> contact.moshfiq@gmail.com<br>© Moshfiq Elahi 2020, all rights reserved.</p>    
+    </footer>
 </body>
 </html>
